add new website from server na

--- a/xem-phim-moi/vay-ham-tren-khong/index.html
+++ b/xem-phim-moi/vay-ham-tren-khong/index.html
@@ -1191,7 +1191,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             5
+             6
             </dd>
             <br/>
            </dl>
@@ -1781,62 +1781,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/dong-pha-gia-su" title="Đông Pha Gia Sự">
-           <span class="status">
-            HD Lồng Tiếng
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/dong-pha-gia-su-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Đông Pha Gia Sự
-            </span>
-            <span class="list-top-movie-item-en">
-             Văn Hào Tô Đông Pha
-            </span>
-            <span class="list-top-movie-item-view">
-             1 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nhung-co-nang-nam-1979" title="Những Cô Nàng Năm 1979">
+          <a class="list-top-movie-link" href="/phim-moi/nu-y-ta-can-truong" title="Nữ Y Tá Can Trường">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nhung-co-nang-nam-1979-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nu-y-ta-can-truong-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Những Cô Nàng Năm 1979
+             Nữ Y Tá Can Trường
             </span>
             <span class="list-top-movie-item-en">
-             Girls' Generation 1979
-            </span>
-            <span class="list-top-movie-item-view">
-             1 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/mai-am-cua-meo-chi" title="Mái Ấm Của Mèo Chi">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/mai-am-cua-meo-chi-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Mái Ấm Của Mèo Chi
-            </span>
-            <span class="list-top-movie-item-en">
-             Chi's Sweet Home
+             The School Nurse Files
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1847,18 +1803,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/xac-song-phan-7" title="Xác Sống (Phần 7)">
+          <a class="list-top-movie-link" href="/phim-moi/dai-duong-nu-phap-y" title="Đại Đường Nữ Pháp Y">
            <span class="status">
-            HD Vietsub
+            HD Vietsub + Thuyết minh
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/xac-song-phan-7-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/dai-duong-nu-phap-y-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Xác Sống (Phần 7)
+             Đại Đường Nữ Pháp Y
             </span>
             <span class="list-top-movie-item-en">
-             The Walking Dead (Season 7)
+             Miss Truth
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1869,21 +1825,65 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/mat-day-phan-8" title="Mặt Dày (Phần 8)">
+          <a class="list-top-movie-link" href="/phim-moi/ma-dai" title="Ma dai">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/mat-day-phan-8-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ma-dai-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Mặt Dày (Phần 8)
+             Ma dai
             </span>
             <span class="list-top-movie-item-en">
-             Shameless (Season 8)
+             Tenacious Ghost
             </span>
             <span class="list-top-movie-item-view">
-             5 lượt xem
+             3 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/the-blue-max" title="The Blue Max">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/the-blue-max-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             The Blue Max
+            </span>
+            <span class="list-top-movie-item-en">
+             The Blue Max
+            </span>
+            <span class="list-top-movie-item-view">
+             3 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/thu-thach-than-chet-49-ngay-cuoi-cung" title="Thử Thách Thần Chết: 49 Ngày Cuối Cùng">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thu-thach-than-chet-49-ngay-cuoi-cung-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Thử Thách Thần Chết: 49 Ngày Cuối Cùng
+            </span>
+            <span class="list-top-movie-item-en">
+             Along With the Gods: The Last 49 Days
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
