add new website from server na

--- a/xem-phim-moi/deadpool-va-wolverine/index.html
+++ b/xem-phim-moi/deadpool-va-wolverine/index.html
@@ -1195,7 +1195,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             12
+             13
             </dd>
             <br/>
            </dl>
@@ -1774,40 +1774,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/xin-hay-tro-thanh-nguoi-nha-cua-toi" title="Xin Hãy Trở Thành Người Nhà Của Tôi">
+          <a class="list-top-movie-link" href="/phim-moi/1923" title="1923">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/xin-hay-tro-thanh-nguoi-nha-cua-toi-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/1923-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Xin Hãy Trở Thành Người Nhà Của Tôi
+             1923
             </span>
             <span class="list-top-movie-item-en">
-             Please be My Family
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/con-duong-mua-xuan" title="Con đường mùa xuân">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/con-duong-mua-xuan-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Con đường mùa xuân
-            </span>
-            <span class="list-top-movie-item-en">
-             Ao Haru Ride
+             1923
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1818,18 +1796,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/chuyen-phuc-tap" title="Chuyện phức tạp">
+          <a class="list-top-movie-link" href="/phim-moi/chu-chuot-sieu-quay" title="Chú Chuột Siêu Quậy">
            <span class="status">
-            Vietsub - HD Vietsub
+            HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chuyen-phuc-tap-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chu-chuot-sieu-quay-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Chuyện phức tạp
+             Chú Chuột Siêu Quậy
             </span>
             <span class="list-top-movie-item-en">
-             A Complicated Story
+             Stuart Little
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
@@ -1840,18 +1818,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/tham-vong-the-gioi-ngam" title="Tham vọng thế giới ngầm">
+          <a class="list-top-movie-link" href="/phim-moi/chao-em-co-nang-buong-binh" title="Chào Em, Cô Nàng Bướng Bỉnh">
            <span class="status">
-            HD Vietsub
+            HD Vietsub + Thuyết minh
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tham-vong-the-gioi-ngam-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chao-em-co-nang-buong-binh-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Tham vọng thế giới ngầm
+             Chào Em, Cô Nàng Bướng Bỉnh
             </span>
             <span class="list-top-movie-item-en">
-             Sky High
+             Sapai Rai Sukdina
+            </span>
+            <span class="list-top-movie-item-view">
+             3 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/giay-phut-doat-menh" title="Giây Phút Đoạt Mệnh">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/giay-phut-doat-menh-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Giây Phút Đoạt Mệnh
+            </span>
+            <span class="list-top-movie-item-en">
+             Running Out Of Time
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1862,21 +1862,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/jon-batiste-ban-giao-huong-hoa-ky" title="Jon Batiste: Bản giao hưởng Hoa Kỳ">
+          <a class="list-top-movie-link" href="/phim-moi/neu-oc-sen-co-tinh-yeu-ban-thai" title="Nếu Ốc Sên Có Tình Yêu (Bản Thái)">
            <span class="status">
-            Vietsub - HD Vietsub
+            HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/jon-batiste-ban-giao-huong-hoa-ky-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/neu-oc-sen-co-tinh-yeu-ban-thai-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Jon Batiste: Bản giao hưởng Hoa Kỳ
+             Nếu Ốc Sên Có Tình Yêu (Bản Thái)
             </span>
             <span class="list-top-movie-item-en">
-             American Symphony
+             When a Snail Falls in Love
             </span>
             <span class="list-top-movie-item-view">
-             2 lượt xem
+             1 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
