add new website from server na

--- a/xem-phim-moi/deadpool-va-wolverine/index.html
+++ b/xem-phim-moi/deadpool-va-wolverine/index.html
@@ -1195,7 +1195,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             13
+             14
             </dd>
             <br/>
            </dl>
@@ -1774,40 +1774,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/1923" title="1923">
+          <a class="list-top-movie-link" href="/phim-moi/chi-hoa-bi" title="Chỉ Hoạ Bì">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/1923-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chi-hoa-bi-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             1923
+             Chỉ Hoạ Bì
             </span>
             <span class="list-top-movie-item-en">
-             1923
-            </span>
-            <span class="list-top-movie-item-view">
-             1 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/chu-chuot-sieu-quay" title="Chú Chuột Siêu Quậy">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chu-chuot-sieu-quay-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Chú Chuột Siêu Quậy
-            </span>
-            <span class="list-top-movie-item-en">
-             Stuart Little
+             Paper Beauty
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
@@ -1818,18 +1796,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/chao-em-co-nang-buong-binh" title="Chào Em, Cô Nàng Bướng Bỉnh">
+          <a class="list-top-movie-link" href="/phim-moi/phan-uat" title="Phẫn Uất">
            <span class="status">
-            HD Vietsub + Thuyết minh
+            HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chao-em-co-nang-buong-binh-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/phan-uat-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Chào Em, Cô Nàng Bướng Bỉnh
+             Phẫn Uất
             </span>
             <span class="list-top-movie-item-en">
-             Sapai Rai Sukdina
+             Tyrannosaur
+            </span>
+            <span class="list-top-movie-item-view">
+             5 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/di-nhan-nu-than-chien-tranh" title="Dị Nhân: Nữ Thần Chiến Tranh">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/di-nhan-nu-than-chien-tranh-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Dị Nhân: Nữ Thần Chiến Tranh
+            </span>
+            <span class="list-top-movie-item-en">
+             Mutant: Ghost War Girl
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
@@ -1840,21 +1840,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/giay-phut-doat-menh" title="Giây Phút Đoạt Mệnh">
+          <a class="list-top-movie-link" href="/phim-moi/jashin-chan-noi-dien-2" title="Jashin-chan Nổi Điên 2">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/giay-phut-doat-menh-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/jashin-chan-noi-dien-2-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Giây Phút Đoạt Mệnh
+             Jashin-chan Nổi Điên 2
             </span>
             <span class="list-top-movie-item-en">
-             Running Out Of Time
+             Jashin-chan Dropkick 2 Dropkick on My God' Seanson 2
             </span>
             <span class="list-top-movie-item-view">
-             2 lượt xem
+             1 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1862,21 +1862,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/neu-oc-sen-co-tinh-yeu-ban-thai" title="Nếu Ốc Sên Có Tình Yêu (Bản Thái)">
+          <a class="list-top-movie-link" href="/phim-moi/ngoi-mo-tang-thuong-hon-ma-nu" title="Ngôi Mộ Tang Thương : Hồn Ma Nữ">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/neu-oc-sen-co-tinh-yeu-ban-thai-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ngoi-mo-tang-thuong-hon-ma-nu-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Nếu Ốc Sên Có Tình Yêu (Bản Thái)
+             Ngôi Mộ Tang Thương : Hồn Ma Nữ
             </span>
             <span class="list-top-movie-item-en">
-             When a Snail Falls in Love
+             Mourning Grave Aka The Girl's Grave
             </span>
             <span class="list-top-movie-item-view">
-             1 lượt xem
+             4 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
