add new website from server na

--- a/xem-phim-bo/qua-chieu/index.html
+++ b/xem-phim-bo/qua-chieu/index.html
@@ -1185,7 +1185,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             2
+             3
             </dd>
             <br/>
            </dl>
@@ -1688,62 +1688,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/loi-nguyen-bong-dem" title="Lời Nguyền Bóng Đêm">
+          <a class="list-top-movie-link" href="/phim-moi/tran-lut-thien-nien-ky" title="Trận lụt thiên niên kỷ">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/loi-nguyen-bong-dem-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tran-lut-thien-nien-ky-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Lời Nguyền Bóng Đêm
+             Trận lụt thiên niên kỷ
             </span>
             <span class="list-top-movie-item-en">
-             Dark Shadows
-            </span>
-            <span class="list-top-movie-item-view">
-             3 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/con-luan-canh" title="Côn Luân Cảnh">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/con-luan-canh-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Côn Luân Cảnh
-            </span>
-            <span class="list-top-movie-item-en">
-             Mystic Land
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/messi-den-nuoc-my" title="Messi Đến Nước Mỹ">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/messi-den-nuoc-my-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Messi Đến Nước Mỹ
-            </span>
-            <span class="list-top-movie-item-en">
-             Messi Meets America
+             High Water
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1754,21 +1710,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/the-terminal-list" title="The Terminal List">
+          <a class="list-top-movie-link" href="/phim-moi/khong-dau-hang" title="Không Đầu Hàng">
            <span class="status">
-            HD Vietsub
+            Full HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/the-terminal-list-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/khong-dau-hang-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             The Terminal List
+             Không Đầu Hàng
             </span>
             <span class="list-top-movie-item-en">
-             The Terminal List
+             Karmouz War
             </span>
             <span class="list-top-movie-item-view">
-             3 lượt xem
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1776,21 +1732,65 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/tran-bong-tuyet-voi" title="Trận Bóng Tuyệt Vời">
+          <a class="list-top-movie-link" href="/phim-moi/khoanh-khac-chet" title="Khoảnh khắc chết">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tran-bong-tuyet-voi-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/khoanh-khac-chet-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Trận Bóng Tuyệt Vời
+             Khoảnh khắc chết
             </span>
             <span class="list-top-movie-item-en">
-             The Perfect Game
+             Flashback
             </span>
             <span class="list-top-movie-item-view">
-             3 lượt xem
+             0 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/birdman-or-the-unexpected-virtue-of-ignorance" title="Birdman or (The Unexpected Virtue of Ignorance)">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/birdman-or-the-unexpected-virtue-of-ignorance-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Birdman or (The Unexpected Virtue of Ignorance)
+            </span>
+            <span class="list-top-movie-item-en">
+             Birdman or (The Unexpected Virtue of Ignorance)
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/rec-3-genesis" title="[REC] 3: Genesis">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ec-3-genesis-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             [REC] 3: Genesis
+            </span>
+            <span class="list-top-movie-item-en">
+             [REC] 3: Genesis
+            </span>
+            <span class="list-top-movie-item-view">
+             1 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
