add new website from server na

--- a/xem-phim-bo/thien-nga-do/index.html
+++ b/xem-phim-bo/thien-nga-do/index.html
@@ -1183,7 +1183,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             3
+             4
             </dd>
             <br/>
            </dl>
@@ -1653,21 +1653,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/bao-ve-jacob" title="Bảo Vệ Jacob">
+          <a class="list-top-movie-link" href="/phim-moi/thunderbolt-and-lightfoot" title="Thunderbolt and Lightfoot">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bao-ve-jacob-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thunderbolt-and-lightfoot-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Bảo Vệ Jacob
+             Thunderbolt and Lightfoot
             </span>
             <span class="list-top-movie-item-en">
-             Defending Jacob
+             Thunderbolt Và Lightfoot
             </span>
             <span class="list-top-movie-item-view">
-             5 lượt xem
+             3 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1675,40 +1675,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nhiem-vu-toi-mat" title="Nhiệm Vụ Tối Mật">
+          <a class="list-top-movie-link" href="/phim-moi/tran-hon" title="Trấn Hồn">
            <span class="status">
-            HD Vietsub
+            HD Thuyết Minh
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nhiem-vu-toi-mat-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tran-hon-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Nhiệm Vụ Tối Mật
+             Trấn Hồn
             </span>
             <span class="list-top-movie-item-en">
-             Battle for Incheon: Operation Chromite
-            </span>
-            <span class="list-top-movie-item-view">
-             1 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/shattered" title="Shattered">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/shattered-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Shattered
-            </span>
-            <span class="list-top-movie-item-en">
-             Shattered
+             Guardian
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1719,18 +1697,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/shahmaran" title="Shahmaran">
+          <a class="list-top-movie-link" href="/phim-moi/tro-choi-ai-quoc" title="Trò Chơi Ái Quốc">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/shahmaran-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tro-choi-ai-quoc-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Shahmaran
+             Trò Chơi Ái Quốc
             </span>
             <span class="list-top-movie-item-en">
-             Shahmaran
+             Patriot Games
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1741,18 +1719,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/chien-binh-thu-13" title="Chiến Binh Thứ 13">
+          <a class="list-top-movie-link" href="/phim-moi/ban-cua-bep-truong-phan-5" title="Bàn của bếp trưởng (Phần 5)">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chien-binh-thu-13-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ban-cua-bep-truong-phan-5-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Chiến Binh Thứ 13
+             Bàn của bếp trưởng (Phần 5)
             </span>
             <span class="list-top-movie-item-en">
-             The 13th Warrior
+             Chef's Table (Season 5)
+            </span>
+            <span class="list-top-movie-item-view">
+             3 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/xac-song-phan-2" title="Xác Sống (Phần 2)">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/xac-song-phan-2-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Xác Sống (Phần 2)
+            </span>
+            <span class="list-top-movie-item-en">
+             The Walking Dead (Season 2)
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
